--- a/src/main/resources/com/example/cs449sosgame/hello-view.fxml
+++ b/src/main/resources/com/example/cs449sosgame/hello-view.fxml
@@ -6,14 +6,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="580.0" prefWidth="565.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cs449sosgame.HelloController">
+<VBox alignment="CENTER" prefHeight="580.0" prefWidth="565.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cs449sosgame.Controller">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -28,28 +27,77 @@
          <Text layoutX="115.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOS" wrappingWidth="49.796875" />
       </children>
    </Pane>
-   <GridPane prefWidth="385.0">
-     <columnConstraints>
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-     </columnConstraints>
-     <rowConstraints>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-     </rowConstraints>
-   </GridPane>
+   <TilePane maxHeight="-Infinity" maxWidth="-Infinity" prefColumns="8" prefHeight="243.0" prefRows="8" prefWidth="241.0">
+      <children>
+         <Rectangle fx:id="box1" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" onMouseClicked="#boxClicked_A1" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="30.0" opacity="0.55" stroke="BLACK" strokeType="INSIDE" width="30.0" />
+      </children>
+      <VBox.margin>
+         <Insets left="50.0" right="50.0" top="1.0" />
+      </VBox.margin>
+   </TilePane>
 
     <Label fx:id="welcomeText" />
    <Pane prefHeight="146.0" prefWidth="250.0">
@@ -68,6 +116,7 @@
             </toggleGroup>
          </RadioButton>
          <RadioButton layoutX="443.0" layoutY="35.0" mnemonicParsing="false" text="Computer" toggleGroup="$togglePlayer2" />
+         <Text layoutX="193.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current turn" wrappingWidth="124.796875" />
       </children>
    </Pane>
 </VBox>
